force-app/main/default/objects/Reuters_ICE_Calculation__c/Reuters_ICE_Calculation__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Reuters ICE Calculation</label>
</CustomObject>