force-app/main/default/objects/Reuters_ICE_Calculation__c/fields/Gelt_Other_Currency__c.field-meta.xml
<CustomField>
    <fullName>Gelt_Other_Currency__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gelt Other Currency</label>
    <type>Checkbox</type>
</CustomField>