force-app/main/default/objects/Reuters_ICE_Calculation__c/fields/Product_Differential__c.field-meta.xml
<CustomField>
    <fullName>Product_Differential__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Product Differential</label>
    <type>Checkbox</type>
</CustomField>