force-app/main/default/objects/Reuters_ICE_Calculation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Quote_Name__c</columns>
    <columns>Display_Name__c</columns>
    <columns>SETUP_TYPE</columns>
    <columns>Column__c</columns>
    <columns>frequency__c</columns>
    <columns>Gelt_Other_Currency__c</columns>
    <columns>ProdDiff_Display_Name__c</columns>
    <columns>Product_Differential__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>