force-app/main/default/objects/Reuters_ICE_Calculation__c/listViews/EOD.listView-meta.xml
<ListView>
    <fullName>EOD</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>SETUP_TYPE</columns>
    <columns>Display_Name__c</columns>
    <columns>frequency__c</columns>
    <columns>Gelt_Other_Currency__c</columns>
    <columns>isUpdated__c</columns>
    <columns>ProdDiff_Display_Name__c</columns>
    <columns>Product_Differential__c</columns>
    <columns>Quote_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>frequency__c</field>
        <operation>equals</operation>
        <value>Daily</value>
    </filters>
    <label>EOD</label>
    <language>en_US</language>
</ListView>