force-app/main/default/objects/Reuters_ICE_Calculation__c/listViews/ICE.listView-meta.xml
<ListView>
    <fullName>ICE</fullName>
    <columns>NAME</columns>
    <columns>Quote_Name__c</columns>
    <columns>Display_Name__c</columns>
    <columns>frequency__c</columns>
    <columns>ProdDiff_Display_Name__c</columns>
    <columns>Product_Differential__c</columns>
    <columns>Gelt_Other_Currency__c</columns>
    <columns>Column__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>frequency__c</field>
        <operation>equals</operation>
        <value>Live</value>
    </filters>
    <label>ICE</label>
    <language>en_US</language>
</ListView>