force-app/main/default/objects/Reuters_ICE_Calculation__c/listViews/SOM.listView-meta.xml
<ListView>
    <fullName>SOM</fullName>
    <columns>NAME</columns>
    <columns>Display_Name__c</columns>
    <columns>frequency__c</columns>
    <columns>isUpdated__c</columns>
    <columns>ProdDiff_Display_Name__c</columns>
    <columns>Product_Differential__c</columns>
    <columns>Quote_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Quote_Name__c</field>
        <operation>contains</operation>
        <value>ICE</value>
    </filters>
    <label>SOM</label>
    <language>en_US</language>
</ListView>